--- a/.github/workflows/macstadium-tests.yml
+++ b/.github/workflows/macstadium-tests.yml
@@ -167,11 +167,12 @@ jobs:
         run: |
           sed -i'' -e "s/IS_TESTING=false/IS_TESTING=true/" .env && rm -f .env-e 
           yarn detox build --configuration ios.sim.release
+      - name: Detox iOS e2e tests serial
+        run: |
+          ./scripts/run-serial-e2e.sh
 
       - name: Detox iOS e2e tests parallel
         run: |
-          ./scripts/run-parallel-e2e.sh 3
+          ./scripts/run-parallel-e2e.sh
 
-      - name: Detox iOS e2e tests serial
-        run: |
-          ./scripts/run-serial-e2e.sh 3
+     
