--- a/.github/workflows/macstadium-tests.yml
+++ b/.github/workflows/macstadium-tests.yml
@@ -1,6 +1,7 @@
 name: iOS e2e tests
 on:
   pull_request:
+    # prevent running on draft PRs
     types: [opened, synchronize, reopened, ready_for_review]
   workflow_dispatch:
 
