--- a/package.json
+++ b/package.json
@@ -175,6 +175,7 @@
     "ethereumjs-wallet": "1.0.1",
     "events": "3.3.0",
     "expo": "51.0.38",
+    "expo-image-picker": "15.1.0",
     "expo-store-review": "7.0.2",
     "fast-text-encoding": "1.0.4",
     "global": "4.4.0",
