Run Jest tests with `--detectOpenHandles --forceExit` args

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "postinstall": "./scripts/postinstall.sh",
     "start": "react-native start",
     "start:clean": "yarn clean:packager && react-native start -- --reset-cache",
-    "test": "jest",
+    "test": "jest --detectOpenHandles --forceExit",
     "ts-coverage": "typescript-coverage-report",
     "ts-migrate-folder": "./scripts/ts-migrate-folder.sh",
     "uninstall:android": "adb uninstall me.rainbow; true",
