implement no compression for bundling

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -122,6 +122,10 @@ android {
         }
     }
 
+    androidResources {
+        noCompress += ["bundle"]
+    }
+
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
