Add Jotai utils, clean up internal state folder, switch from `isEqual` to `dequal` for faster comparisons

--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "dedent": "0.7.0",
     "delay": "4.4.0",
     "deprecated-react-native-prop-types": "2.2.0",
+    "dequal": "2.0.3",
     "dns.js": "1.0.1",
     "domain-browser": "1.2.0",
     "emoji-datasource": "4.1.0",
@@ -189,6 +190,7 @@
     "immer": "9.0.6",
     "inherits": "2.0.4",
     "is-valid-domain": "0.1.2",
+    "jotai": "2.12.1",
     "lint-staged": "10.4.0",
     "lodash": "4.17.21",
     "make-color-more-chill": "0.2.2",
