--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "prepare": "husky install",
     "bundle-inpage": "yarn webpack --config src/browser/webpack.config.js && cp InjectedJSBundle.js android/app/src/main/res/raw/injected_js_bundle.js",
     "// Fetch backend networks": "",
-    "fetch:networks": "node ./scripts/networks.js"
+    "fetch:networks": "source .env && node ./scripts/networks.js"
   },
   "dependencies": {
     "@bankify/react-native-animate-number": "0.2.1",
