Add Skia cards, `SkiaText` component, WIP airdrops sheet

--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "@lavamoat/preinstall-always-fail": "2.0.0",
     "@ledgerhq/hw-app-eth": "6.39.0",
     "@ledgerhq/react-native-hw-transport-ble": "6.33.4",
+    "@legendapp/list": "1.0.0-beta.11",
     "@metamask/eth-sig-util": "7.0.2",
     "@notifee/react-native": "7.8.2",
     "@rainbow-me/provider": "0.1.2",
@@ -177,6 +178,7 @@
     "expo": "51.0.38",
     "expo-store-review": "7.0.2",
     "fast-text-encoding": "1.0.4",
+    "figma-squircle": "1.1.0",
     "global": "4.4.0",
     "grapheme-splitter": "1.0.4",
     "graphql-request": "5.0.0",
