--- a/ios/Gemfile
+++ b/ios/Gemfile
@@ -4,7 +4,8 @@ source 'https://rubygems.org'
 ruby '>= 2.7.0'
 
 gem "fastlane"
-gem 'cocoapods', '1.16.2'
+# Exclude problematic versions of cocoapods and activesupport that causes build failures.
+gem 'cocoapods', '>= 1.13', '!= 1.15.0', '!= 1.15.1'
 gem 'activesupport', '>= 6.1.7.5', '<7.1.0'
 
 plugins_path = File.join(File.dirname(__FILE__), 'fastlane', 'Pluginfile')
