--- a/package.json
+++ b/package.json
@@ -72,9 +72,10 @@
   "dependencies": {
     "@bankify/react-native-animate-number": "0.2.1",
     "@bradgarropy/use-countdown": "1.4.1",
-    "@candlefinance/faster-image": "1.6.2",
+    "@candlefinance/faster-image": "1.7.2",
     "@capsizecss/core": "3.0.0",
     "@coinbase/mobile-wallet-protocol-host": "0.1.7",
+    "@d11/react-native-fast-image": "8.8.1",
     "@ensdomains/address-encoder": "0.2.16",
     "@ensdomains/content-hash": "2.5.7",
     "@ensdomains/eth-ens-namehash": "2.0.15",
@@ -100,6 +101,7 @@
     "@ethersproject/units": "5.7.0",
     "@ethersproject/wallet": "5.7.0",
     "@gorhom/bottom-sheet": "4.6.1",
+    "@imgix/js-core": "3.8.0",
     "@json-rpc-tools/utils": "1.7.6",
     "@lavamoat/preinstall-always-fail": "2.0.0",
     "@ledgerhq/hw-app-eth": "6.39.0",
@@ -112,24 +114,23 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-camera-roll/camera-roll": "7.7.0",
     "@react-native-clipboard/clipboard": "1.13.2",
-    "@react-native-community/blur": "4.4.0",
     "@react-native-community/netinfo": "9.0.0",
     "@react-native-firebase/app": "20.1.0",
     "@react-native-firebase/messaging": "20.1.0",
     "@react-native-firebase/remote-config": "20.1.0",
     "@react-native-masked-view/masked-view": "0.3.1",
     "@react-native-menu/menu": "1.1.3",
-    "@react-native/metro-config": "0.74.83",
-    "@react-navigation/core": "6.4.16",
-    "@react-navigation/material-top-tabs": "6.6.2",
-    "@react-navigation/native": "6.1.17",
-    "@react-navigation/stack": "6.3.29",
+    "@react-native/metro-config": "0.76.2",
+    "@react-navigation/core": "6.4.17",
+    "@react-navigation/material-top-tabs": "6.6.14",
+    "@react-navigation/native": "6.1.18",
+    "@react-navigation/stack": "6.4.1",
     "@reown/walletkit": "1.1.1",
     "@reservoir0x/reservoir-sdk": "2.3.0",
     "@rudderstack/rudder-sdk-react-native": "1.12.1",
-    "@sentry/react-native": "5.31.1",
-    "@shopify/flash-list": "1.7.0",
-    "@shopify/react-native-skia": "1.3.11",
+    "@sentry/react-native": "5.35.0",
+    "@shopify/flash-list": "1.7.2",
+    "@shopify/react-native-skia": "1.5.3",
     "@tanstack/query-async-storage-persister": "4.2.1",
     "@tanstack/react-query": "4.2.1",
     "@tanstack/react-query-persist-client": "4.2.1",
@@ -156,7 +157,7 @@
     "buffer": "4.9.2",
     "check-password-strength": "2.0.7",
     "chroma-js": "2.1.0",
-    "cloudinary": "1.27.1",
+    "cloudinary": "2.5.1",
     "conditional-wrap": "1.0.2",
     "console-browserify": "1.2.0",
     "constants-browserify": "1.0.0",
@@ -175,7 +176,9 @@
     "ethereumjs-util": "6.2.1",
     "ethereumjs-wallet": "1.0.1",
     "events": "3.3.0",
-    "expo": "51.0.33",
+    "expo": "52.0.7",
+    "expo-blur": "14.0.1",
+    "expo-linear-gradient": "~14.0.1",
     "fast-text-encoding": "1.0.4",
     "global": "4.4.0",
     "grapheme-splitter": "1.0.4",
@@ -185,7 +188,6 @@
     "https-browserify": "0.0.1",
     "i18n-js": "3.8.0",
     "idna-uts46-hx": "3.4.0",
-    "imgix-core-js": "2.3.2",
     "immer": "9.0.6",
     "inherits": "2.0.4",
     "is-valid-domain": "0.1.2",
@@ -208,21 +210,22 @@
     "qrcode": "1.4.4",
     "qs": "6.9.7",
     "querystring-es3": "0.2.1",
-    "react": "18.2.0",
+    "react": "18.3.1",
     "react-coin-icon": "rainbow-me/react-coin-icon#06464588a3d986f6ef3a7d7341b2d7ea0c5ac50b",
     "react-fast-compare": "2.0.4",
     "react-fast-memo": "2.0.1",
     "react-flatten-children": "1.1.2",
-    "react-freeze": "1.0.3",
-    "react-native": "0.74.3",
+    "react-freeze": "1.0.4",
+    "react-native": "0.76.2",
     "react-native-action-sheet": "2.2.0",
     "react-native-actionsheet": "2.4.2",
     "react-native-aes-crypto": "rainbow-me/react-native-aes#65c49f7e70266615b2999eaa7db654d3fe4f2e3b",
-    "react-native-animateable-text": "0.12.1",
+    "react-native-animateable-text": "0.14.2",
     "react-native-ble-plx": "3.2.1",
-    "react-native-bootsplash": "5.5.3",
+    "react-native-blur-view": "https://github.com/kirgudkov/react-native-blur-view#dea4b6a43495827ca1633e07ef39dc23302bb372",
+    "react-native-bootsplash": "6.3.1",
     "react-native-branch": "5.3.1",
-    "react-native-change-icon": "4.0.0",
+    "react-native-change-icon": "5.0.0",
     "react-native-circular-progress": "1.3.8",
     "react-native-cloud-fs": "rainbow-me/react-native-cloud-fs#9b204615b76cf3d29bd86a9094dbd95d717b6a7a",
     "react-native-crypto": "2.2.0",
@@ -230,42 +233,41 @@
     "react-native-device-info": "5.3.1",
     "react-native-dotenv": "2.4.2",
     "react-native-extra-dimensions-android": "1.2.2",
-    "react-native-fast-image": "8.5.11",
     "react-native-fs": "2.16.6",
-    "react-native-gesture-handler": "2.18.1",
+    "react-native-gesture-handler": "2.21.1",
     "react-native-get-random-values": "1.5.0",
-    "react-native-haptic-feedback": "2.2.0",
+    "react-native-haptic-feedback": "2.3.3",
     "react-native-image-crop-picker": "0.41.2",
     "react-native-indicators": "0.17.0",
-    "react-native-ios-context-menu": "1.15.3",
+    "react-native-ios-context-menu": "2.5.2",
+    "react-native-ios-utilities": "4.5.1",
     "react-native-keyboard-area": "1.0.6",
     "react-native-keychain": "8.0.0",
     "react-native-level-fs": "3.0.1",
-    "react-native-linear-gradient": "2.8.3",
     "react-native-mail": "4.1.0",
-    "react-native-markdown-display": "7.0.0-alpha.2",
+    "react-native-markdown-display": "7.0.2",
     "react-native-minimizer": "rainbow-me/react-native-minimizer#26ae6dce10d353de701cebc3a1ae126729bf87f0",
-    "react-native-mmkv": "2.12.2",
+    "react-native-mmkv": "3.1.0",
     "react-native-os": "rainbow-me/react-native-os#41a08e45260b8c1c53c77ad00e13ae954cb9337c",
-    "react-native-pager-view": "5.4.24",
+    "react-native-pager-view": "6.5.0",
     "react-native-palette-full": "1.2.0",
     "react-native-permissions": "3.10.1",
     "react-native-quick-md5": "3.0.6",
     "react-native-radial-gradient": "rainbow-me/react-native-radial-gradient#b99ab59d27dba70364ef516bd5193c37657ba95c",
     "react-native-randombytes": "3.5.3",
-    "react-native-reanimated": "3.15.0",
+    "react-native-reanimated": "3.16.1",
     "react-native-redash": "16.3.0",
     "react-native-restart": "0.0.22",
-    "react-native-safe-area-context": "4.11.0",
+    "react-native-safe-area-context": "4.14.0",
     "react-native-safe-area-view": "rainbow-me/react-native-safe-area-view",
     "react-native-screen-corner-radius": "0.2.2",
-    "react-native-screens": "3.34.0",
+    "react-native-screens": "3.35.0",
     "react-native-section-list-get-item-layout": "2.2.3",
     "react-native-share": "8.2.1",
     "react-native-sound": "0.11.2",
     "react-native-splash-screen": "3.3.0",
     "react-native-storage": "1.0.1",
-    "react-native-svg": "15.6.0",
+    "react-native-svg": "15.9.0",
     "react-native-tab-view": "3.5.1",
     "react-native-tcp": "3.3.2",
     "react-native-text-input-mask": "2.0.0",
@@ -275,10 +277,10 @@
     "react-native-udp": "2.7.0",
     "react-native-url-polyfill": "2.0.0",
     "react-native-version-number": "0.3.6",
-    "react-native-video": "6.3.0",
-    "react-native-view-shot": "3.8.0",
-    "react-native-vision-camera": "4.4.2",
-    "react-native-webview": "13.8.2",
+    "react-native-video": "6.7.0",
+    "react-native-view-shot": "4.0.0",
+    "react-native-vision-camera": "4.6.1",
+    "react-native-webview": "13.12.4",
     "react-native-widgetkit": "1.0.9",
     "react-navigation-backhandler": "2.0.1",
     "react-primitives": "0.8.1",
@@ -315,22 +317,25 @@
     "zustand": "4.5.4"
   },
   "devDependencies": {
-    "@babel/core": "7.22.0",
-    "@babel/helper-skip-transparent-expression-wrappers": "7.18.9",
-    "@babel/parser": "7.22.0",
+    "@babel/core": "7.25.9",
+    "@babel/helper-skip-transparent-expression-wrappers": "7.25.9",
+    "@babel/parser": "7.25.9",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.18.6",
     "@babel/plugin-proposal-numeric-separator": "7.18.6",
     "@babel/plugin-proposal-optional-chaining": "7.21.0",
-    "@babel/plugin-transform-export-namespace-from": "7.24.7",
-    "@babel/plugin-transform-react-inline-elements": "7.18.6",
-    "@babel/plugin-transform-runtime": "7.18.10",
-    "@babel/preset-env": "7.22.0",
-    "@babel/runtime": "7.22.0",
+    "@babel/plugin-transform-export-namespace-from": "7.25.9",
+    "@babel/plugin-transform-react-inline-elements": "7.25.9",
+    "@babel/plugin-transform-runtime": "7.25.9",
+    "@babel/preset-env": "7.25.9",
+    "@babel/runtime": "7.25.9",
     "@lavamoat/allow-scripts": "3.0.1",
     "@nomiclabs/hardhat-ethers": "2.2.3",
     "@nomiclabs/hardhat-waffle": "2.0.6",
-    "@react-native/babel-preset": "0.74.83",
-    "@react-native/typescript-config": "0.74.83",
+    "@react-native-community/cli": "15.0.1",
+    "@react-native-community/cli-platform-android": "15.0.1",
+    "@react-native-community/cli-platform-ios": "15.0.1",
+    "@react-native/babel-preset": "0.76.2",
+    "@react-native/typescript-config": "0.76.2",
     "@rnx-kit/align-deps": "2.2.4",
     "@testing-library/react-native": "11.2.0",
     "@types/chroma-js": "2.1.3",
@@ -341,7 +346,7 @@
     "@types/mocha": "9.0.0",
     "@types/node": "16.11.6",
     "@types/qs": "6.9.7",
-    "@types/react": "18.2.65",
+    "@types/react": "18.2.79",
     "@types/react-native-extra-dimensions-android": "1.2.3",
     "@types/react-test-renderer": "18.3.0",
     "@types/styled-components": "5.1.7",
@@ -367,10 +372,9 @@
     "husky": "8.0.1",
     "image-size": "1.0.0",
     "jest": "29.7.0",
-    "metro-plugin-anisotropic-transform": "https://github.com/rainbow-me/metro-plugin-anisotropic-transform#593b1299f4fec3ddd3f8ad92d381e3d9ad171b82",
     "node-vibrant": "3.2.1-alpha.1",
     "prettier": "3.2.5",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "18.3.1",
     "resolve": "1.22.8",
     "rn-nodeify": "10.2.0",
     "schedule": "0.5.0",
@@ -494,5 +498,10 @@
       "prettier --write",
       "eslint --cache"
     ]
+  },
+  "codegenConfig": {
+    "name": "ButtonSpecs",
+    "type": "components",
+    "jsSrcsDir": "./src/components/animations/ButtonPressAnimation"
   }
 }
