--- a/tsconfig.json
+++ b/tsconfig.json
@@ -50,7 +50,8 @@
       "logger": ["src/utils/logger"],
       "react-native-cool-modals": ["src/react-native-cool-modals"],
       "@rainbow-me/animated-charts": ["src/react-native-animated-charts/src"],
-      "react-native-shadow-stack": ["src/react-native-shadow-stack"]
+      "react-native-shadow-stack": ["src/react-native-shadow-stack"],
+      "react-native-fast-image": ["./node_modules/@d11/react-native-fast-image"]
     },
     "resolveJsonModule": true
   },
