--- a/e2e-new/utils/ImportWalletWithKey.yaml
+++ b/e2e-new/utils/ImportWalletWithKey.yaml
@@ -3,8 +3,15 @@ env:
   PKEY: ${DEV_PKEY}
   NAME: 'Test Wallet'
 ---
+- tapOn: 'I already have one'
+- tapOn: 'Import a Secret Phrase or Private Key'
+- tapOn: 'Enter a recovery phrase or private key'
+- inputText: ${DEV_PKEY}
+- tapOn: 'Continue'
 - assertVisible:
-    id: welcome-screen
-- openLink: rainbow://e2e/import?privateKey=${PKEY}&name=${NAME}
+    id: wallet-info-input
+- inputText: 'Test Wallet'
+- tapOn: 'Import Wallet'
+- runFlow: MaybeSetupPin.yaml
 - assertVisible:
     id: wallet-screen
