--- a/e2e-new/browser/MaliciousDappWarning.yaml
+++ b/e2e-new/browser/MaliciousDappWarning.yaml
@@ -22,19 +22,16 @@ tags:
     id: browser-search-input
 - assertVisible: 'Find apps and more'
 - inputText: 'https://test-dap-welps.vercel.app/'
-- wait: 5000
 
 # Attempt to connect to dapp
 # Note: Since we can't directly interact with WebView content,
 # we use coordinates. These may need adjustment based on device.
-- tapAt:
-    x: 275
-    y: 80
-- wait: 2000
-- tapAt:
-    x: 50
-    y: 325
-- wait: 1000
+- tapOn:
+    point: 275, 80
+    waitToSettleTimeoutMs: 5000
+- tapOn:
+    point: 50, 325
+    waitToSettleTimeoutMs: 5000
 
 # Verify warning appears
 - assertVisible:
