--- a/e2e-new/backup/ManualBackupDetails.yaml
+++ b/e2e-new/backup/ManualBackupDetails.yaml
@@ -14,6 +14,7 @@ tags:
       - tapOn:
           id: settings-menu
       - tapOn: 'Settings'
+# crashes here occassionally... we also have the notifications popup getting in the way
 - tapOn:
     id: backup-section
 - assertVisible: 'Wallets & Backup'
