--- a/package.json
+++ b/package.json
@@ -213,6 +213,7 @@
     "querystring-es3": "0.2.1",
     "react": "18.2.0",
     "react-coin-icon": "rainbow-me/react-coin-icon#06464588a3d986f6ef3a7d7341b2d7ea0c5ac50b",
+    "react-compiler-runtime": "19.0.0-beta-e993439-20250405",
     "react-fast-compare": "3.2.2",
     "react-fast-memo": "2.0.1",
     "react-flatten-children": "1.1.2",
@@ -293,7 +294,7 @@
     "react-style-proptype": "3.2.2",
     "readable-stream": "1.1.14",
     "recoil": "0.7.6",
-    "recyclerlistview": "3.0.5",
+    "recyclerlistview": "4.2.3",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
     "reselect": "4.0.0",
@@ -358,6 +359,7 @@
     "babel-plugin-graphql-tag": "2.5.0",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-module-resolver": "5.0.2",
+    "babel-plugin-react-compiler": "19.0.0-beta-e993439-20250405",
     "babel-plugin-rewire": "1.2.0",
     "babel-plugin-styled-components": "1.11.1",
     "babel-plugin-transform-remove-console": "6.9.4",
@@ -367,6 +369,7 @@
     "dotenv": "8.2.0",
     "eslint": "8.22.0",
     "eslint-config-rainbow": "4.3.0",
+    "eslint-plugin-react-compiler": "19.0.0-beta-e993439-20250405",
     "graphql": "15.3.0",
     "husky": "8.0.1",
     "image-size": "1.0.0",
