--- a/e2e-new/home/HomeScreen.yaml
+++ b/e2e-new/home/HomeScreen.yaml
@@ -3,13 +3,12 @@ tags:
   - home
   - parallel
 ---
-- clearState
 - launchApp:
+    clearState: true
+    clearKeychain: true
     arguments:
       isE2ETest: true
 - runFlow: ../utils/ImportWalletWithKey.yaml
-- assertVisible:
-    id: 'avatar-button'
 - assertVisible:
     id: 'buy-button'
 - assertVisible:
