--- a/e2e-new/utils/MaybeSetupPin.yaml
+++ b/e2e-new/utils/MaybeSetupPin.yaml
@@ -3,6 +3,7 @@ appId: ${APP_ID}
 - runFlow:
     when:
       visible: 'Choose your PIN'
+      platform: Android
     commands:
       - tapOn:
           text: '1'
