improve android startup time

--- a/src/react-native-animated-charts/Example/android/app/build.gradle
+++ b/src/react-native-animated-charts/Example/android/app/build.gradle
@@ -128,6 +128,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    androidResources {
+        noCompress += ["bundle"]
+    }
+
     defaultConfig {
         applicationId "com.example"
         minSdkVersion rootProject.ext.minSdkVersion
