--- a/e2e-new/onboarding/CreateWallet.yaml
+++ b/e2e-new/onboarding/CreateWallet.yaml
@@ -1,3 +1,4 @@
+# Passing !
 appId: ${APP_ID}
 tags:
   - auth
@@ -11,6 +12,8 @@ tags:
     id: welcome-screen
 - tapOn: 'Get a new wallet'
 - runFlow: ../utils/MaybeSetupPin.yaml
+
+# Check wallet screen exists and has expected elements
 - assertVisible:
     id: wallet-screen
 - assertVisible:
