--- a/e2e-new/utils/ImportWalletWithKey.yaml
+++ b/e2e-new/utils/ImportWalletWithKey.yaml
@@ -1,17 +1,18 @@
+# Passing !
 appId: ${APP_ID}
 env:
   PKEY: ${DEV_PKEY}
   NAME: 'Test Wallet'
 ---
+- tapOn: 'I already have one'
+- tapOn: 'Import a Secret Phrase or Private Key'
+- tapOn: 'Enter a recovery phrase or private key'
+- inputText: ${DEV_PKEY}
+- tapOn: 'Continue'
 - assertVisible:
-    id: welcome-screen
-- openLink: rainbow://e2e/import?privateKey=${PKEY}&name=${NAME}
-# The first time a simulator opens a link it shows a dialog.
-- runFlow:
-    when:
-      visible: 'Open in .*'
-      platform: iOS
-    commands:
-      - tapOn: 'Open'
+    id: wallet-info-input
+- inputText: 'Test Wallet'
+- tapOn: 'Import Wallet'
+- runFlow: MaybeSetupPin.yaml
 - assertVisible:
     id: wallet-screen
