--- a/e2e-new/transactions/SendTransaction.yaml
+++ b/e2e-new/transactions/SendTransaction.yaml
@@ -10,13 +10,21 @@ tags:
       isE2ETest: true
 - runFlow: ../utils/ImportWalletWithKey.yaml
 
+# Send ETH to test wallet
+- tapOn:
+    id: fund-test-wallet-button
+
 # Connect to Anvil (test network)
 - tapOn:
     id: dev-button-anvil
 
 # Open send sheet
-- swipe:
-    direction: DOWN
+- retry:
+    maxRetries: 3
+    commands:  
+        - swipe:
+            direction: DOWN
+        - assertVisible: 'Ethereum'
 - tapOn:
     id: send-button
 - assertVisible:
@@ -24,10 +32,13 @@ tags:
 
 # Test ENS address input
 - inputText: 'rainbowwallet.eth'
-- assertVisible:
-    id: send-asset-list
-- assertVisible:
-    id: add-contact-button
+- retry:
+    maxRetries: 3
+    commands:
+        - assertVisible:
+            id: send-asset-list
+        - assertVisible:
+            id: add-contact-button
 
 # Test Add Contact functionality
 - tapOn:
