--- a/.github/actions/android-emulator/action.yml
+++ b/.github/actions/android-emulator/action.yml
@@ -1,4 +1,5 @@
 name: Setup Android Emulator
+description: 'Sets up and configures Android emulator for testing'
 
 inputs:
   api-level:
@@ -19,7 +20,7 @@ inputs:
     default: 'x86_64'
   emulators:
     description: 'The number of emulators to run'
-    default: 1
+    default: '1'
 
 runs:
   using: "composite"
