--- a/.github/workflows/macstadium-android-e2e.yml
+++ b/.github/workflows/macstadium-android-e2e.yml
@@ -1,42 +1,80 @@
 name: Android e2e tests
 
-on: []
+on: [pull_request]
 jobs:
   android-e2e:
-    runs-on: ["self-hosted"]
-    concurrency: 
+    runs-on: blacksmith-8vcpu-ubuntu-2204
+    concurrency:
       group: ${{ github.workflow }}-${{ github.ref }}
       cancel-in-progress: true
 
-    permissions:
-      contents: read
+    env:
+      # Can be used to help debug test failures. This will cause the apk to be
+      # built for all architectures so it can be downloaded from the artifacts
+      # and installed locally. It will also record a video of the test run. Note
+      # that the video is limited to 3 minutes.
+      DEBUG: false
+      SHARDS: 1
+      ANDROID_EMULATOR_API_LEVEL: 33
+      ANDROID_EMULATOR_PROFILE: pixel_6
+      ANDROID_EMULATOR_RAM_SIZE: 4096M
+      ARTIFACTS_FOLDER: e2e-artifacts
+      ARCH: x86_64
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Set up github keys
-        run: git config core.sshCommand "ssh -i ~/.ssh/id_ed25519 -F /dev/null"
+      - name: Setup Java environment
+        uses: useblacksmith/setup-java@v5
+        with:
+          distribution: 'zulu'
+          java-version: '17'
 
-      - name: Clean Android app
-        run: yarn clean:android > /dev/null 2>&1 || true
+      - name: Install secret tools
+        run: sudo apt install libsecret-tools
 
-      - name: Set up ENV vars & scripts
+      - name: Setup env key
+        uses: ./.github/actions/ssh/
+        with:
+          name: env
+          key: ${{ secrets.DEPLOY_PKEY_DOTENV_REPO }}
+
+      - name: Setup scripts key
+        uses: ./.github/actions/ssh/
+        with:
+          name: scripts
+          key: ${{ secrets.DEPLOY_PKEY_SCRIPTS_REPO }}
+
+      - name: Setup sandbox key
+        uses: ./.github/actions/ssh/
+        with:
+          name: sandbox
+          key: ${{ secrets.DEPLOY_PKEY_SANDBOX_REPO }}
+
+      - name: Setup env
         env:
-          CI_SCRIPTS_RN_UPGRADE: ${{ secrets.CI_SCRIPTS_RN_UPGRADE }}
+            SSH_AUTH_SOCK: /tmp/ssh_agent_env.sock
         run: |
-          source ~/.zshrc
-          git clone git@github.com:rainbow-me/rainbow-env.git
-          mv rainbow-env/dotenv .env && rm -rf rainbow-env
-          eval $CI_SCRIPTS_RN_UPGRADE
-          sed -i'' -e "s/IS_TESTING=false/IS_TESTING=true/" .env && rm -f .env-e 
-      
+            git clone git@github.com:rainbow-me/rainbow-env.git
+            mv rainbow-env/dotenv .env
+            mv rainbow-env/android/app/google-services.json android/app/google-services.json
+            rm -rf rainbow-env
+            sed -i "s/IS_TESTING=false/IS_TESTING=true/" .env
+
+      - name: Setup scripts
+        env:
+            CI_SCRIPTS: ${{ secrets.CI_SCRIPTS }}
+            SSH_AUTH_SOCK: /tmp/ssh_agent_scripts.sock
+        run: |
+            eval $CI_SCRIPTS
+
       - name: Get Yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
 
       - name: Cache Yarn dependencies
-        uses: actions/cache@v4
+        uses: useblacksmith/cache@v5
         with:
           path: |
             ${{ steps.yarn-cache-dir-path.outputs.dir }}
@@ -46,9 +84,21 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
+      - name: Cache Gradle build
+        uses: useblacksmith/setup-gradle/setup-gradle@v5
+        with:
+          cache-read-only: false
+
       - name: Install dependencies
+        env:
+          SSH_AUTH_SOCK: /tmp/ssh_agent_sandbox.sock
         run: |
-          yarn cache clean --all && yarn install && yarn setup
+          yarn install && yarn setup
+
+      - name: Install Anvil
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: stable
 
       - name: Check for frozen lockfile
         run: ./scripts/check-lockfile.sh
@@ -56,27 +106,48 @@ jobs:
       - name: Audit CI
         run: yarn audit-ci --config audit-ci.jsonc
 
-      - name: Lint
-        run: yarn lint:ci
-
-      - name: Unit tests
-        run: yarn test
-
-      - name: Rebuild detox cache
-        run: ./node_modules/.bin/detox clean-framework-cache && ./node_modules/.bin/detox build-framework-cache
-      
-      - name: Version debug
-        run: |
-          npx react-native info
-
-      - name: Fix permissions
-        run: |
-          chmod -R +x node_modules/react-native/scripts
-          chmod -R +x node_modules/@sentry/react-native/scripts
-
       - name: Build the app in Release mode
-        run: yarn detox build --configuration android.emu.release
+        run: ./scripts/e2e-android-build.sh
 
-      # change the '3' here to how many times you want the tests to rerun on failure
-      - name: Run iOS e2e tests with retry
-        run: ./scripts/run-retry-tests.sh 3
+      - name: Install Maestro
+        run: curl -fsSL "https://get.maestro.mobile.dev" | bash
+
+      - name: Setup Android Emulator
+        id: android-emulator
+        uses: ./.github/actions/android-emulator/
+        with:
+          emulators: ${{ env.SHARDS }}
+          api-level: ${{ env.ANDROID_EMULATOR_API_LEVEL }}
+          profile: ${{ env.ANDROID_EMULATOR_PROFILE }}
+          ram-size: ${{ env.ANDROID_EMULATOR_RAM_SIZE }}
+          arch: ${{ env.ARCH }}
+
+      - name: Run tests
+        uses: rainbow-me/android-emulator-runner@v2
+        id: e2e_test
+        with:
+          emulators: ${{ env.SHARDS }}
+          api-level: ${{ env.ANDROID_EMULATOR_API_LEVEL }}
+          target: google_apis
+          arch: ${{ env.ARCH }}
+          force-avd-creation: false
+          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none -no-metrics
+          disable-animations: true
+          emulator-port: 5560
+          profile: ${{ env.ANDROID_EMULATOR_PROFILE }}
+          ram-size: ${{ env.ANDROID_EMULATOR_RAM_SIZE }}
+          script: ./scripts/e2e-android-ci.sh
+
+      - name: Upload artifacts
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: artifacts
+          path: ${{ env.ARTIFACTS_FOLDER }}
+
+      - name: Upload apk
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: apk
+          path: android/app/build/outputs/apk/release/app-release.apk
