--- a/.github/workflows/android-e2e.yml
+++ b/.github/workflows/android-e2e.yml
@@ -81,10 +81,10 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
-      # - name: Cache Gradle build
-      #   uses: useblacksmith/setup-gradle/setup-gradle@v5
-      #   with:
-      #     cache-read-only: false
+      - name: Cache Gradle build
+        uses: useblacksmith/setup-gradle/setup-gradle@v5
+        with:
+          cache-read-only: false
 
       - name: Install dependencies
         env:
